# practice-python

./: README.md.old  README.rst  requirements.txt  setup.cfg  tox.ini
src/JdPythonPractice/array/: check_if_array_is_sorted.py  get_second_order_elements.py  largest_element_in_array.py  missing_number_in_an_array.py  move_zeros_to_end.py  remove_duplicates_from_sorted_array.py  rotate_array_by_k_elements.py  rotate_array_by_one.py
src/JdPythonPractice/basic_maths/: count_digits.py  divisors.py  highest_common_factor.py  is_armstrong_number.py  is_palindrome.py  is_prime.py  reverse_digits.py
src/JdPythonPractice/basic_recursion/: factorial.py  fibonacci.py  is_palindrome.py  is_palindrome_recursive.py  sum_natural_numbers.py
src/JdPythonPractice/display_pattern/: box.py  diamond.py  half_diamond.py  left_right_triangles.py  left_right_triangles_numbers.py  left_sided_triangle.py  left_sided_triangle_boolean_numbers.py  left_sided_triangle_letters.py  left_sided_triangle_letters_reverse.py  left_sided_triangle_letters_row.py  left_sided_triangle_number_column.py  left_sided_triangle_number_incremental.py  left_sided_triangle_number_row.py  left_sided_triangle_reverse.py  left_sided_triangle_reverse_letters.py  left_sided_triangle_reverse_number_column.py  negative_diamond.py  negative_triangle.py  negative_two_triangles.py  number_box.py  square.py  triangle.py  triangle_letters.py  triangle_reverse.py
src/JdPythonPractice/maths/: ENG1002_Term_2_Coursework_2025.py  ENG1002_Term_2_Coursework_2025_Tests.py  poly_examples.py  polynomial.py
(+24 files in other folders)
