[metadata]
name = JdPythonPractice
version = 0.0.0
license = <license name, e.g. MIT>
description = Practice project for Python
long_description = file: README.rst
author = Dr John Digby
author_email = jdigby99751@gmail.com
classifiers=
   Programming Language :: Python
   Development Status :: 1 - Planning

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =

[options.packages.find]
where=src